--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,7 @@
 # json | mysql выбор бд
 DB_SOURCE=mysql
-
+# Переменная для окружение
+APP_ENV=docker
 # Для docker пароль и порты для mysql,phpMyAdmin
 MYSQL_PASSWORD=#
 MYSQL_PORT=3307
