--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
       "App\\Services\\": "app/Services",
       "App\\Controller\\": "app/Controller",
       "App\\Models\\": "app/Models",
-      "App\\View\\": "app/View"
+      "App\\View\\": "app/View",
+      "App\\Router\\": "app/Router"
     }
   }
 }
